--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!-- Image Gallery-->
     <div class="services-section">
         <div class="services-heading" id="Services">
-            <h1>Check out out services below!</h1>
+            <h1>Check out our services below!</h1>
         </div>
 
         <div class="services">
